# buildscharacter

./: .gitignore  PROJECT.md  STATE.md
brand/: brand_guidelines.md
brand/tools/: generate_logo.py  package-lock.json  package.json  rasterize.mjs  screenshot.mjs
docs/plans/: 2026-02-23-buildscharacter-design.md  2026-02-23-implementation-plan.md  2026-02-24-bootstrap-sprint-design.md  2026-02-24-bootstrap-sprint-implementation.md  2026-02-24-image-generation-design.md  2026-02-24-image-generation-plan.md  2026-02-24-shop-page-design.md  2026-02-24-shop-page-plan.md  2026-02-24-telegram-conversational-design.md  (+15 more)
hobson/: .env.example  pyproject.toml
hobson/deploy/: hobson.service
hobson/scripts/: generate_sticker_batch.py  generate_sticker_batch_v2.py
hobson/sql/: 001_schema.sql  002_messages_approvals.sql  003_order_events.sql
hobson/src/hobson/: agent.py  config.py  db.py  health.py  main.py  scheduler.py
hobson/src/hobson/tools/: analytics.py  git_ops.py  image_gen.py  obsidian.py  printful.py  substack.py  telegram.py
hobson/src/hobson/workflows/: bootstrap_diary.py  business_review.py  content_pipeline.py  design_batch.py  morning_briefing.py  substack_dispatch.py
hobson/tests/test_tools/: test_git_ops.py  test_image_gen.py
order-guard/: .env.example  pyproject.toml
order-guard/deploy/: order-guard.service
order-guard/src/order_guard/: config.py  db.py  main.py  notify.py  printful.py  rules.py
order-guard/tests/: test_notify.py  test_rules.py  test_webhook.py
site/: astro.config.mjs  package-lock.json  package.json
(+40 files in other folders)
