[project]
name = "hobson"
version = "0.1.0"
description = "Hobson: Autonomous business agent for BuildsCharacter.com"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=3.0",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "python-telegram-bot>=21",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "python-substack>=0.1",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
